# OpenCV4Android

./: README.md
app/: CMakeLists.txt  build.gradle  project_record.txt
app/src/androidTest/java/shuyun/opencv4android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/shuyun/opencv4android/: BaseActivity.java  CVBaseActivity.java  ImageProcessActivity.java  MainActivity.java
app/src/main/java/shuyun/opencv4android/common/: BaseActivity.java  CVBaseActivity.java
app/src/main/java/shuyun/opencv4android/constant/: App.java  Const.java
app/src/main/java/shuyun/opencv4android/module/camera/: Camera2Activity.java  Camera2Helper.java  CameraActivity.java  CameraRenderView.java  CameraView.java  JavaCamera2View.java
app/src/main/java/shuyun/opencv4android/module/image/: ImageProcessActivity.java
app/src/main/java/shuyun/opencv4android/util/: GLHelper.java  Log.java  RxPermissionFactory.java
app/src/main/res/layout/: activity_main.xml  camera_activity_camera.xml  camera_activity_camera2.xml  camera_activity_cameraview.xml  image_activity_imageprocess.xml
app/src/test/java/shuyun/opencv4android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary341/: build.gradle
